[package]
name = "reverse_proxy"
version = "0.1.0"
authors = ["Stephen Leyva <sleyva1297@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
consistent_hashing = "0.4.0"
rocket = "0.4.5"
rocket_contrib = "0.4.5"
redis = "0.17.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"